--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -45,8 +45,7 @@ Pour notre part nous avons réalisé un transistor à molécule unique à l'aide
 \input{4.Resultats}
 
 \chapter{Aller plus loin ? Vers de nouvelles expériences…}
-\section{Une expérience à 20mK}
-\section{Vers l'informatique quantique?}
+\input{5.AllerPlusLoin}
 
 \bibliographystyle{unsrt}
 \bibliography{bibliographie.bib}
