--- a/1.EtatDeL'Art.tex
+++ b/1.EtatDeL'Art.tex
@@ -1,5 +1,5 @@
 \section{L'idée d'une électronique moléculaire}
-C'est en 1974 que l'idée d'utiliser des molécules uniques dans la fabrication de composants électroniques est apparue, lors d'un séminaire tenu par Arieh Aviram et Mark Ratner.
+\footnote{Cet état de l'art se base sur ceux présentés dans \cite{SpinMolecDynamique} et \cite{}}C'est en 1974 que l'idée d'utiliser des molécules uniques dans la fabrication de composants électroniques est apparue, lors d'un séminaire tenu par Arieh Aviram et Mark Ratner.
 
 Cette date peut être considérée comme la naissance de ce que l'on appelle l'électronique moléculaire.
 Le but étant à la fois de permettre d'aller encore plus loin dans la miniaturisation des composants en microélectronique mais aussi d'adopter une technique de fabrication basée sur l'auto-organisation de petites molécules en structure complexe: technique dite “bottom-up”.
