--- a/5.AllerPlusLoin.tex
+++ b/5.AllerPlusLoin.tex
@@ -6,7 +6,7 @@ Les contacts par pointes sont aussi remplacée par des micro-soudures qui possè
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=150px]{Photos/Refrigerateur_dillution.png}
+       % \includegraphics[width=150px]{Photos/Refrigerateur_Dillution.png}
         \caption{Photographie du réfrigérateur à dilution et de l’ensemble du banc de mesure}
         \label{fig:}
     \end{center}
