--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -48,5 +48,5 @@ Pour notre part nous avons réalisé un transistor à molécule unique à l'aide
 \input{5.AllerPlusLoin}
 
 \bibliographystyle{unsrt}
-\bibliography{bibliographie.bib}
+\bibliography{bibliographie}
 \end{document}
