added a lot in biblio

--- a/bibliographie.bib
+++ b/bibliographie.bib
@@ -1,15 +1,126 @@
 @misc{NanoSpin,
-  title = {Page de l'équipe {N}ano{S}pin},
+  title        = {Page de l'équipe {N}ano{S}pin},
+  author       = "",
+  year         = "",
   howpublished = {\url{http://neel.cnrs.fr/spip.php?rubrique51}},
 }
+
 @misc{InterviewFB,
-  title = {Interview de {F}ranck {B}alestro site {UJF}},
+  title        = {Interview de {F}ranck {B}alestro site {UJF}},
+  author       = "",
+  year         = "",
   howpublished = {\url{https://www.ujf-grenoble.fr/node/8357}},
 }
 
 @book{goossens93,
-    author    = "Goossens, Michel and Mittlebach, Frank and Samarin, Alexander",
-    title     = "The Latex Companion",
-    year      = "1993",
-    publisher = "Addison-Wesley",
+    author     = "Goossens, Michel and Mittlebach, Frank and Samarin, Alexander",
+    title      = "The Latex Companion",
+    year       = "1993",
+    publisher  = "Addison-Wesley",
 }
+
+@misc{SpinMolecDynamique,
+  title        = {Spintronique moleculaire : {É}tude de la dynamique d'un spin nucleaire unique},
+  author       = "Romain Vincent",
+  year         = "2014",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/tel-00945672/file/pdf2star-1383124819-these_vincent_romain_archivage_2012.pdf}},
+}
+
+@misc{default,
+  title        = {Quantum transport through single molecule devices: spin and vibration},
+  author       = "Florian Elste",
+  year         = "avril 2008",
+  howpublished = {\url{http://www.diss.fu-berlin.de/diss/servlets/MCRFileNodeServlet/FUDISS_derivate_000000003863/thesisELSTE.pdf}},
+}
+
+@misc{default,
+  title        = {Coulomb blockade in {Q}uantum {D}ots},
+  author       = "Andreas Fuhrer and Carina Fasth",
+  year         = "avril 2007",
+  howpublished = {\url{http://www.ftf.lth.se/fileadmin/ftf/Course_pages/FFF042/cb_lecture07.pdf}},
+}
+
+@misc{default,
+  title        = {Article {W}ikipedia sur le fullerène},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://fr.wikipedia.org/wiki/Fullerène}},
+}
+
+@misc{default,
+  title        = {Physical principles of the single-{C}60 transistor effect},
+  author       = "C. Joachim, H. Tang, J.K. Gimzewski",
+  year         = "1998",
+  howpublished = {\url{http://www.chem.ucla.edu/dept/Faculty/gimzewski/publications/149-1998 Physical Review B.pdf}},
+}
+
+@misc{default,
+  title        = {Caractérisation électrique de l'endommagement par électromigration des interconnexions en cuivre},
+  author       = "Lise Doyen",
+  year         = "2009",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/tel-00437444/document}},
+}
+
+@misc{default,
+  title        = {Transport électronique dans des nanocassures pour la réalisation de transistors à molecule unique},
+  author       = "Aurore Mangin",
+  year         = "2012",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/tel-00515127/document}},
+}
+
+@misc{default,
+  title        = {Transistors à molécule unique des effets Kondo exotiques à la spintronique moléculaire (Nicolas Roch) mars 2010},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/tel-00456601v2/document}},
+}
+
+@misc{default,
+  title        = {Vers la mesure de nano-objets uniques, realisation de nanogaps par electromigration(Stéphanie Girod) 2012},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/file/index/docid/727574/filename/ThA_se_GIROD_Stephanie.pdf}},
+}
+
+@misc{default,
+  title        = {Read-out and coherent manipulation of an isolated nuclear spin using a single-molecule magnet spin-transistor (Stefan Thiele) avril 2014},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{https://tel.archives-ouvertes.fr/tel-00984973/document}},
+}
+
+@misc{default,
+  title        = {Electron Transport in single Molecule Transistor (Jiwoong Park) 2003},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://www.lassp.cornell.edu/lassp_data/mceuen/homepage/Publications/Thesis_JPark.pdf}},
+}
+
+@misc{default,
+  title        = {Spins in few electrons quantum dots (R. Hanson, L. P. Kouwenhoven, J. R. Petta, S. Tarucha, L. M. K. Vandersypen) octobre 2007},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://kouwenhovenlab.tudelft.nl/wp-content/uploads/2011/10/190-Spins_in_few-electron_.pdf}},
+}
+
+@misc{default,
+  title        = {Effet de champ et électronique à un électron dans des nanotubes de carbone auto-assemblées par CVD assistée d'un filament chaud (Laetitia Marty) octobre 2004},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://perso.neel.cnrs.fr/vincent.bouchiat/page_personnelle_de_Vincent_Bouchiat/Theses_files/thesis_marty.pdf}},
+}
+
+@misc{default,
+  title        = {Conception et réalisation d'un nouveau capteur de gaz passif communicant à transduction RF (Paul Sabatier) Novembre 2011},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://thesesups.ups-tlse.fr/1028/1/Hallil_Hamida.pdf}},
+}
+
+@misc{default,
+  title        = {Site Lakeshore sur les testeurs sous pointes},
+  author       = "",
+  year         = "199",
+  howpublished = {\url{http://www.lakeshore.com/products/Cryogenic-Probe-Stations/Pages/Cryogenic-Probe-Stations.aspx}},
+}
+  
