--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -47,6 +47,18 @@ Pour notre part nous avons réalisé un transistor à molécule unique à l'aide
 \chapter{Aller plus loin ? Vers de nouvelles expériences…}
 \input{5.AllerPlusLoin}
 
+\chapter*{Conclusion}
+Durant ce projet de recherche, nous avons vu comment réaliser un transistor de type SET (Single Electron Transistor) à l'aide d'une molécule de fullerène. Cette idée de créer des transistors à partir de molécules organiques est apparu dans les années 1970. Ce n'est seulement que dans les années 1990 que nous verrons l'apparition des premiers transistors à molécule unique.\\
+
+La réalisation d'un tel transistor se fait évidement en plusieurs étapes:
+
+La première consiste à créer des nanofils d'or sur une plaque de Al$_2$0$_3$ où nous déposerons ensuite les molécules de fullerène. Ce dépôt se fait avant l'électromigration car cela augmente les chances qu'une molécule se loge dans un nanogap créée par l'électromigration.
+
+Vient ensuite l'étape de l'électromigration. Elle consiste à appliquer un courant tel que les électrons emportent les atomes d'or qui constituent les nanofils grâce à leur énergie cinétique. En créant ces nanogaps, une molécule de fullerène peut se loger à l'intérieur et ainsi créer notre boite quantique. 
+
+Le dépôt de fullerène et la création de nanogaps peuvent se suivre en direct grâce au testeur sous pointes et le logiciel ADWin. Par exemple, il permet de suivre en direct l'augmentation de la résistance du nanogap durant l'électromigration, de savoir s'il reste des canaux par où passent les électrons et donc de savoir si le nanogap a été formé (on trouvera une résistance R$_\text{max}$=25k$\Omega$). La caractéristique I(Vg) permettra quant à elle de savoir si oui ou non une molécule de fullerène est dans le nanogap. Ces instruments permettent donc à la fois la création des SET et la mesure de leurs caractéristiques.
+
+Cette technologie a vu le jour dans les années 90. Mais la difficulté d'utilisation de ce type de transistor, notamment parce qu'il faut se placer à de très basse température (4,2K). Les chercheurs actuels ont remplacé la molécule de fullerène par de nouvelles molécules, le TbPc$_2$ par exemple. Cette molécule est très utilisée car elle permet la lecture et la manipulation d'un spin nucléaire. Mais la recherche ne s’arrête pas là: effectivement, l'équipe de Franck Balestro travaille actuellement avec plusieurs équipes de chimistes à travers le monde dans le but de trouver de nouvelles molécules intéressantes pour avancer dans le domaine de la spintronique.
 \bibliographystyle{unsrt}
 \bibliography{bibliographie}
 \end{document}
