--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -7,16 +7,17 @@
 \usepackage{lmodern, wrapfig, textcomp, tikz, graphicx, amsmath, tikz-qtree, xcolor,rotating,epic,eepic}
 \usepackage[colorlinks,linkcolor=black, urlcolor=blue]{hyperref}
 \usepackage[babel=true,kerning=true]{microtype}
-
+\usepackage{url}
 \date{}
 \title{}
 \author{}
 
 \begin{document}
+\nocite{*}
 \input{0.Couverture}
 
 \begin{abstract}
-L'équipe avec laquelle s'est effectuée notre projet de recherche est l'équipe Nanospintronique et Transport Moléculaire de l'institut Louis Néel. Et c'est en particulier Franck Balestro qui nous a encadré lors de l'expérience et en amont de celle-ci.\\
+L'équipe avec laquelle s'est effectuée notre projet de recherche est l'équipe Nanospintronique et Transport Moléculaire de l'institut Louis Néel. Et c'est en particulier Franck Balestro qui nous a encadrés lors de l'expérience et en amont de celle-ci.\\
 \begin{figure}[h]
     \begin{center}
         \includegraphics[height=133px]{Images/Balestro-trim.jpg}
@@ -26,11 +27,11 @@ L'équipe avec laquelle s'est effectuée notre projet de recherche est l'équipe
     \end{center}
 \end{figure}
                                              
-L'équipe travaille à la manipulation et à la lecture de spins nucléaires uniques, c'est à dire de relier le monde quantique au monde macroscopique et permettre à terme l'avènement de l'informatique quantique. Pour ce faire ils utilisent des molécules ayant des propriétés spécifiques: les aimants moléculaires, d'excellents candidats pour le stockage et le traitement de l'information quantique.\cite{NanoSpin} Les molécules étant de plus de très petite taille comparativement aux dimensions des transistors utilisés en électronique classique, elles pourraient permettre d'améliorer la densité des circuits. Pour résumer et comme le dit Franck Balestro l'objectif de l'équipe est "de créer l'électronique du futur avec des molécules"\cite{InterviewFB}.\\
+L'équipe travaille à la manipulation et à la lecture de spins nucléaires uniques, c'est à dire relier le monde quantique au monde macroscopique et permettre à terme l'avènement de l'informatique quantique. Pour ce faire ils utilisent des molécules ayant des propriétés spécifiques: les aimants moléculaires, d'excellents candidats pour le stockage et le traitement de l'information quantique.\cite{1} Les molécules étant de plus de très petite taille comparativement aux dimensions des transistors utilisés en électronique classique, elles pourraient permettre d'améliorer la densité des circuits. Pour résumer et comme le dit Franck Balestro l'objectif de l'équipe est "de créer l'électronique du futur avec des molécules"\cite{2}.\\
 
 Les enjeux sont donc immenses, particulièrement dans un contexte où la réduction des dimensions des transistors devient de plus en plus problématique et où le besoin en puissance de calcul de nos ordinateurs devient de plus en plus important ; une "nouvelle électronique" peut être la solution.\\
 
-Pour notre part nous avons réalisé un transistor à molécule unique à l'aide de fullerène. Une telle molécule ne possède pas de propriété particulière mais permet de comprendre le fonctionnement général des transistors à molécule unique. Historiquement, c'est la toute première molécule utilisée pour ce type de réalisation en 2000 par l'équipe de Park.
+Pour notre part nous avons réalisé un transistor à molécule unique à l'aide de fullerène. Une telle molécule ne possède pas de propriété particulière mais permet de comprendre le fonctionnement général des transistors à molécule unique. Historiquement, c'est la toute première molécule utilisée pour ce type de réalisation en 2000 par l'équipe de Park\cite{13}.
 \end{abstract}
 
 \chapter{État de l'art}
