--- a/1.EtatDeL'Art.tex
+++ b/1.EtatDeL'Art.tex
@@ -1,5 +1,5 @@
 \section{L'idée d'une électronique moléculaire}
-\footnote{Cet état de l'art se base sur ceux présentés dans \cite{SpinMolecDynamique} et \cite{}}C'est en 1974 que l'idée d'utiliser des molécules uniques dans la fabrication de composants électroniques est apparue, lors d'un séminaire tenu par Arieh Aviram et Mark Ratner.
+\footnote{Cet état de l'art se base sur ceux présentés dans \cite{3} et \cite{4}}C'est en 1974 que l'idée d'utiliser des molécules uniques dans la fabrication de composants électroniques est apparue, lors d'un séminaire tenu par Arieh Aviram et Mark Ratner.
 
 Cette date peut être considérée comme la naissance de ce que l'on appelle l'électronique moléculaire.
 Le but étant à la fois de permettre d'aller encore plus loin dans la miniaturisation des composants en microélectronique mais aussi d'adopter une technique de fabrication basée sur l'auto-organisation de petites molécules en structure complexe: technique dite “bottom-up”.
@@ -20,4 +20,4 @@ Ce n'est qu'en 2000 que J.W. Park et son équipe utiliseront une technique d'él
     \end{center}
 \end{figure}
 
-Cependant cette molécule n'est pas un aimant moléculaire, et il impossible donc de se servir des propriétés quantiques liées au magnétisme moléculaire. Les équipes vont donc se tourner vers d'autres aimants moléculaires notamment Fe$_{4}$ (à Delft), Ni$_{4}$(à Cornell)...etc et la molécule TbPc$_{2}$ (molécule organique avec un atome de Terbium) à l'institut Louis Néel dans l'équipe de Franck Balestro. L'aimant moléculaire TbPc$_{2}$ utilisée dans un transistor à molécule unique a permis de réaliser la lecture électrique et la manipulation quantique d'un spin nucléaire unique.
+Cependant cette molécule n'est pas un aimant moléculaire, et il est donc impossible de se servir des propriétés quantiques liées au magnétisme moléculaire. Les équipes vont alors se tourner vers d'autres aimants moléculaires notamment Fe$_{4}$ (à Delft), Ni$_{4}$(à Cornell)...etc et la molécule TbPc$_{2}$ (molécule organique avec un atome de Terbium) à l'institut Louis Néel dans l'équipe de Franck Balestro. L'aimant moléculaire TbPc$_{2}$ utilisée dans un transistor à molécule unique a permis de réaliser la lecture électrique et la manipulation quantique d'un spin nucléaire unique.
