changed a picture dimension

--- a/3.Realisation.tex
+++ b/3.Realisation.tex
@@ -60,7 +60,7 @@ Pour observer les diamants de Coulomb on mesure des faibles courant (nA),  on s√
 
 \begin{figure}[h]
     \begin{center}
-        \includegraphics[width=250px]{Photos/Branchements_ADWin.jpg}
+        \includegraphics[trim=0mm 0mm 80px 600px, clip, width=200px]{Photos/Branchements_ADWin.jpg}
         \caption{Branchements de l'interface Adwin lors de l'√©lectromigration, on peut voir sur la droite le convertisseur courant-tension}
         \label{fig:}
     \end{center}
