--- a/4.Resultats.tex
+++ b/4.Resultats.tex
@@ -26,29 +26,22 @@ Malheureusement nous n’avons pas pu mesurer des diamants de Coulomb exploitabl
 
 \section{Quelques cas particuliers}
 Après ces considérations générales étudions quelques cas particuliers, et plus précisément des observations obtenues lorsque des problèmes ont été rencontrés au cours de l’expérience.
- \begin{figure}[h]
-    \begin{center}
-        \includegraphics[width=150px]{Images/Nanofil_Emdommage.png}
+\begin{figure}[h]
+    \centering
+    \begin{subfigure}[b]{0.28\textwidth}
+        \includegraphics[width=\textwidth]{Images/Nanofil_Emdommage.png}
         \caption{Nanofil endommagé avant électromigration}
-        \label{fig:}
-    \end{center}
-\end{figure}
-
- \begin{figure}[h]
-    \begin{center}
-        \includegraphics[width=150px]{Images/Grille_Endommagee}
-        \caption{Grille endommagée}
-        \label{fig:}
-    \end{center}
-\end{figure}
-
- \begin{figure}[h]
-    \begin{center}
-        \includegraphics[width=150px]{Images/Grille_Detruite}
+    \end{subfigure}%
+    \quad %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    \begin{subfigure}[b]{0.28\textwidth}
+        \includegraphics[width=\textwidth]{Images/Grille_Endommagee}
+        \caption{Grille endommagée avant électromigration}
+    \end{subfigure}
+    \quad
+    \begin{subfigure}[b]{0.28\textwidth}
+        \includegraphics[width=\textwidth]{Images/Grille_Detruite}
         \caption{Grille détruite (au delà de Vg=7V on détruit la grille)}
-        \label{fig:}
-    \end{center}
+    \end{subfigure}
+    \caption{Cas particuliers}
 \end{figure}
-
-
 
