--- a/5.AllerPlusLoin.tex
+++ b/5.AllerPlusLoin.tex
@@ -6,12 +6,11 @@ Les contacts par pointes sont aussi remplacée par des micro-soudures qui possè
 
 \begin{figure}[h]
     \begin{center}
-       % \includegraphics[width=150px]{Photos/Refrigerateur_Dillution.png}
+        \includegraphics[width=150px]{Photos/Refrigerateur_Dillution.png}
         \caption{Photographie du réfrigérateur à dilution et de l’ensemble du banc de mesure}
         \label{fig:}
     \end{center}
 \end{figure}
-Photographie disponible à https://tel.archives-ouvertes.fr/tel-00984973/document
 
 Pour finir l’expérience actuelle se déroule actuellement à des températures de 30mK dans un réfrigérateurs à dilution, la température de électronique étant elle de l’ordre de 80mK \cite{10}. Le principe du réfrigérateur à dilution est comparable à celui d’un réfrigérateur classique, des détentes de Joule-Thomsom successives pour refroidir l’hélium à de très basses températures. Le réfrigérateur étant constitué de différents étages dont les températures vont en diminuant pour limiter les pertes. Il faut cependant attendre plusieurs heures pour qu’une température de 30mK soit atteinte.
 \section{Vers l'informatique quantique?}
