--- a/Dossier de Projet de Recherche.tex
+++ b/Dossier de Projet de Recherche.tex
@@ -8,6 +8,8 @@
 \usepackage[colorlinks,linkcolor=black, urlcolor=blue]{hyperref}
 \usepackage[babel=true,kerning=true]{microtype}
 \usepackage{url}
+\usepackage{caption}
+\usepackage{subcaption}
 \date{}
 \title{}
 \author{}
