changed couverture image

--- a/0.Couverture.tex
+++ b/0.Couverture.tex
@@ -15,7 +15,7 @@
     \large{\textsc{Léo Friedrich, Paul Noël, Luca Panat, Félix Piédallu}}\\[2cm]
     \large{\textsc{Tuteur : Frank Balestro}}\\[2cm]
 
-%\includegraphics[scale=0.64]{Images/LogoPNS}
+%\includegraphics[width=0.3\textwidth]{Images/C60.png}
 
 \end{center}
 \end{titlepage}
